--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,61 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+}
+
+#pokemonSelection {
+  height: 100%;
+  padding-inline-start: 0px;
+  flex: 0 0 auto;
+  overflow-y: scroll;
+}
+
+#pokemonInfoPanel {
+  flex: 1 1 0;
+  border: 1px #000000 solid;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+#pokemonInfoPanel .name {
+  height: 5vh;
+  font-size: 2em;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: brown;
+}
+
+.selector {
+  border-bottom: 1px #000000 solid;
+  list-style: none;
+  border-left: 1px #000000 solid;
+  border-right: 1px #000000 solid;
+  padding: 5px 10px;
+}
+
+.selector:first-child {
+  border-top: 1px #000000 solid;
+}
+
+.selector:hover {
+  background-color: #61dafb;
+  cursor: pointer;
+}
+
+.selector[data-selected="true"] {
+  background-color: coral;
+}
+
+.poke-section .title {
+  font-size: 1.6em;
+  font-weight: bold;
 }
 
 .App-logo {
@@ -30,4 +86,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+table {
+  table-layout: fixed;
 }
